Implement React Router for navigation, add new routes for Home and Contact pages, and update Header component for routing. Include react-router-dom in dependencies and adjust package-lock.json accordingly.

--- a/public/404.html
+++ b/public/404.html
@@ -6,6 +6,7 @@
     <script>
       // Single Page Apps for GitHub Pages
       // https://github.com/rafgraph/spa-github-pages
+      // This handles React Router routing on GitHub Pages
       var pathSegmentsToKeep = 1;
       var l = window.location;
       l.replace(
